# cli-template

./: README.md  copier.yml  pyproject.toml
cli/{{project_name}}/: .gitignore  .python-version.jinja  README.md.jinja  pyproject.toml.jinja
cli/{{project_name}}/src/{{package_name}}/: __main__.py.jinja  cli.py.jinja
cli/{{project_name}}/src/{{project_name}}/: cli.py.jinja  config.py.jinja
src/cli/: __init__.py  cli.py  config.py
{{project_name}}/: README.md.jinja
{{project_name}}/src/{{project_name}}/: __init__.py.jinja
