[project]
name = "cli"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "TianaNanta", email = "andrianjakananta@gmail.com" }
]
dependencies = [
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "typer>=0.12.3",
]
readme = "README.md"
requires-python = ">= 3.9"
license = { text = "MIT" }

[project.scripts]
"cli" = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cli"]
